--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </div>
       </div>
       <footer>
-        KOREDE KOLADA | <a href="">GitHub</a>
+        NICHOLAS JEREMY | <a href="https://github.com/Jeremy-nike">GitHub</a>
       </footer>
     </div>
   </div>
