--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.min.css">
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="css/loader.css">
+  <link rel="stylesheet" href="css/scrollbar.css">
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:700,900&display=swap" rel="stylesheet">
 
 </head>
